chore(actions): enforce ubuntu-latest runners

--- a/.github/workflows/markdown-style-checks.yml
+++ b/.github/workflows/markdown-style-checks.yml
@@ -1,28 +1,26 @@
 name: Markdown style checks
-
 on:
-  workflow_call:
+  workflow_call: null
   push:
     branches:
     - main
     paths:
-    - 'docs/**'   # Only run on changes to the docs directory
+    - docs/**
   pull_request:
     branches:
     - '*'
     paths:
-    - 'docs/**'   # Only run on changes to the docs directory
-
+    - docs/**
 jobs:
   markdown-lint:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
       with:
         fetch-depth: 0
     - name: Create venv
-      working-directory: "docs"
+      working-directory: docs
       run: make install
     - name: Lint markdown
-      working-directory: "docs"
+      working-directory: docs
       run: make lint-md
